added my solved challenge questions